fix(fe): navbar z index was a little too low

--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 5000;
   width: 100%;
   .navbar-container {
     display: flex;
